# adspower

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
adspower/: __init__.py  _api_entity.py  _base_category.py  _base_group.py  _base_http_client.py  _base_profile_api.py  adspower.py  exceptions.py  types.py  utils.py
adspower/async_api/: __init__.py  _base_profile.py  category.py  group.py  http_client.py  profile_api.py
adspower/async_api/playwright/: profile.py
adspower/async_api/selenium/: profile.py
adspower/sync_api/: __init__.py  _base_profile.py  category.py  group.py  http_client.py  profile_api.py
adspower/sync_api/playwright/: __init__.py  profile.py
adspower/sync_api/selenium/: __init__.py  profile.py
tests/: conftest.py  test_ads_power.py  test_async_api.py  test_sync_api.py
