[tool.poetry]
name = 'adspower'
version = '1.0.0'
description = 'The package for interacting with API of anti-detect browser AdsPower.'
authors = ['Alexey <abelenkov2006@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/blnkoff/adspower'
homepage = 'https://github.com/blnkoff/adspower'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]
packages = [{ include = 'adspower' }]

[tool.poetry.dependencies]
python = '^3.11'
requests = "^2.31.0"
selenium = "^4.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
twine = "^4.0.2"
build = "^1.0.3"
sphinx-rtd-theme = "^2.0.0"
sphinx = "^7.2.6"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
