[tool.poetry]
name = 'adspower'
version = '2.1.0'
description = 'The package for interacting with API of anti-detect browser AdsPower.'
authors = ['Alexey <axbelenkov@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/CrocoFactory/adspower'
homepage = 'https://github.com/CrocoFactory/adspower'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Typing :: Typed'
]
packages = [{ include = 'adspower' }]

[tool.poetry.dependencies]
python = '^3.9'
httpx = "^0.27.0"
selenium = {version = "^4.16.0", optional = true}
playwright = {version = "^1.42.0", optional = true}

[tool.poetry.extras]
selenium = ["selenium"]
playwright = ["playwright"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
twine = "^4.0.2"
build = "^1.0.3"
faker = "^24.9.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
